# optionslab

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  .jupytext.toml  AUDITABLE_SYSTEM_SUMMARY.md  BACKTESTING_CHECKLIST.md  BACKTESTING_SYSTEM_MAP.md  BACKTEST_TODO_LIST.md  BACKTEST_USAGE_GUIDE.md  BULK_ENDPOINTS_STATUS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTEXT_ENGINEERING_REFERENCE.md  DATA_MANAGEMENT.md  DEBUG_RESULTS.md  FIX_SUMMARY.md  FUTURE_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  NOTEBOOK_STANDARDS.md  PROJECT_STRUCTURE.md  PROTECTED_FILES.md  PURE_GRADIO_APPROACH.md  QUICK_START.md  README.md  README_AUDITABLE.md  SYSTEM_CAPABILITIES.md  TESTING_METHODOLOGY.md  WORKSPACE_CLEANUP_SUMMARY.md  advanced_test_strategy.yaml  ai_service.py  auditable_backtest.py  auditable_gradio_app.py  backend.py  backtest_engine.py  create_backup.sh  data_migration_tools.py  data_source_audit.py  debug_backtest.py  (+52 more)
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
PRPs/: EXAMPLE_theta_lib_prp.md  thetadata_client_prp.md
backtest_results/: backtest_20250716_203513_de499aec.json  backtest_20250716_203929_a31b1c8d.json  backtest_20250716_204146_af74f80c.json
backtests/: README.md  backtest_manager.py  gradio_results_viewer.py  market_regime_analyzer.py  run_comprehensive_analysis.py
config/: long_call_regime_filtered.yaml  long_call_simple.yaml  pmcc_strategy.yaml
docs/: API_REFERENCE.md  CSV_FORMAT_GUIDE.md  DEBUG_BACKTEST.md  README.md  ThetaData_API_Summary.txt  architecture.md
examples/: demo_yaml_backtest.py
intraday_strategies/: dte_backtesting
notebooks/: README.md
optionslab/: README.md  agentic_analysis.py  ai_assistant.py  ai_assistant_multi.py  ai_implementation_expert.py  ai_lm_studio.py  ai_openai.py  ai_strategy_generator.py  app.py  auditable_backtest.py  auditable_gradio_app.py  auditable_gradio_app_clean.py  auditable_gradio_app_complete.py  auditable_gradio_app_simplified.py  backtest_engine.py  backtest_metrics.py  create_multiday_parquet.py  csv_enhanced.py  data_loader.py  data_scientist_engine.py  data_scientist_utils.py  debug_app.py  exit_conditions.py  greek_tracker.py  market_filters.py  multi_leg_selector.py  option_selector.py  run_expert_analysis.py  start.sh  start_auditable.sh  test_port.py  test_simple_app.py  thetadata_loader.py  trade_recorder.py  visualization.py  visualization_utils.py
optionslab-core/: QUICK_START.md  README.md  backtester_enhanced.py  config.py  data_loader.py  examples.py  portfolio_manager.py  reporter.py  requirements.txt  risk_manager.py  strategy_base.py
spy_backtester/: README.md  backtester.py  backtester_enhanced.py  cli_utils.py  greeks_tracker.py  interactive_mode.py  portfolio_manager.py  strategy_base.py
spy_options_downloader/: README.md  analyze_greeks.py  check_coverage.py  check_duplicates.py  check_structure.py  coverage_summary.py  create_master_parquet.py  downloader.py
testing_templates/: README.md  phase1_component_test_template.py  phase2_integration_test_template.py  phase3_strategy_test_template.py
tests/: demo_backtest.py  run_all_tests.py  run_tests_simple.py  test_ai_features.py  test_ai_integration.py  test_backtest_engine.py  test_backtest_metrics.py  test_data_loader.py  test_data_loading.py  test_export.py  (+22 more)
(+401 files in other folders)
